create global search

--- a/src/features/dashboard/style.module.css
+++ b/src/features/dashboard/style.module.css
@@ -19,7 +19,7 @@
 
 .buttonContainer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 0.8rem;
