--- a/src/features/projects/Projects/style.module.css
+++ b/src/features/projects/Projects/style.module.css
@@ -1,3 +1,8 @@
+.project {
+  width: 100%;
+  margin: auto;
+}
+
 .container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
@@ -7,5 +12,4 @@
 
 .content {
   padding-top: 35px;
-  color: var(--text-muted);
 }
