Sistesma de notificaciones, optimizacion y creacion de hook para proyectos y optimizaciones de animaciones entre otros

--- a/src/features/globalSearch/style.module.css
+++ b/src/features/globalSearch/style.module.css
@@ -18,10 +18,12 @@
     z-index: 10; 
     overflow: hidden;
     visibility: hidden;
+    opacity: 0;
     transform: translateY(5px);
 }
 
 .listSearch.show {
+    opacity: 1;
     transform: translateY(-5px);
     visibility: visible;
 }
