--- a/src/features/dashboard/style.module.css
+++ b/src/features/dashboard/style.module.css
@@ -1,9 +1,16 @@
 .dashboardHome {
   display: grid;
-  grid-template-columns: repeat(3, minmax(220px, 1fr));
-  grid-template-rows: repeat(2, minmax(220px, 1fr));
-  margin-top: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   gap: 1.2rem;
+}
+
+.containerHistory {
+  width: 100%;
+  height: 300px;
+  margin: 20px 0;
+  background-color: var(--surface);
+  border-radius: var(--radius);
+  border: solid 1px var(--border);
 }
 
 .divider {
@@ -36,12 +43,11 @@
   border: 1px solid var(--border);
   border-radius: 1rem;
   padding: 1.2rem;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  cursor: pointer;
   gap: 0.8rem;
   transition: all 0.25s ease;
+  display: grid;
+  grid-template-columns: subgrid;
 }
 
 .card:hover {
